--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Alien-Script",
-  "name": "Alienworlds.io Console Monitor By Alien-Script",
+  "short_name": "Abababa",
+  "name": "ABABABA",
   "icons": [
     {
       "src": "favicon.ico",
